removed the fixed position of the header image on mobile devices

--- a/style.css
+++ b/style.css
@@ -101,6 +101,9 @@ p {
 }
 
 @media only screen and (max-width: 650px) {
+  .header-img {
+    background-attachment: initial;
+  }
   .speaker-img {
     margin-right: auto;
     margin-left: auto;
